# FinancialFraudDetection

./: .gitignore  Dockerfile  README.md  app.py  demo.py  init_setup.sh  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
config/: config.yaml  schema.yaml
notebook/: research.ipynb
src/: __init__.py
src/exception/: __init__.py
src/frauddetection/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/frauddetection/config/: configuration.py
src/frauddetection/constants/: __init__.py
src/frauddetection/entity/: artifact_entity.py  config_entity.py  model_factory.py
src/frauddetection/pipeline/: pipeline.py
src/frauddetection/utils/: utils.py
src/logger/: __init__.py
