[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.8    

[options.extras_require]
testing =
    mypy>=1.1.1
    flake8>=6.0.0
    tox>=4.4.7
    black>=23.1.0

[options.package_data]
frauddetection = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py